--- a/style.css
+++ b/style.css
@@ -65,6 +65,21 @@ body {
     overflow: auto;
 }
 
+.message-box::-webkit-scrollbar {
+    width: 20px;
+}
+
+.message-box::-webkit-scrollbar-track {
+    background: #fff;
+    border-radius: 25px;
+}
+
+.message-box::-webkit-scrollbar-thumb {
+    background: #1877f2;
+    border-radius: 25px;
+    border: 6px solid #fff;
+}
+
 .button-box {
     margin-top: 30px;
 }
@@ -286,8 +301,9 @@ ul li {
     width: 100%;
     list-style: none;
     padding: 12px;
+    padding-right: 110px;
     font-size: 1.1rem;
-    margin: 0 0 15px 0;
+    margin: 0 0 5px 0;
     border-radius: 5px;
     background: #eee;
     border: none;
@@ -452,4 +468,14 @@ li:hover .action {
         color: #000;
         font-size: 18px;
     }
+
+    li .action {
+        position: absolute;
+        top: 7px;
+        right: 5px;
+        opacity: 0;
+        visibility: visible;
+        opacity: 1;
+    }
+
 }
