--- a/style.css
+++ b/style.css
@@ -19,17 +19,18 @@ body {
 
 .nContainer {
     border: none;
-    bottom: 1%;
+    bottom: -1%;
     left: 35%;
     transform: translateX(50%);
     z-index: 999;
     position: fixed;
+    padding: 30px;
 }
 
 .notification {
     text-align: center;
     margin-bottom: 10px;
-    padding: 10px 10px 10px 30px;
+    padding: 30px;
     color: #000;
     font-size: 18px;
 }
@@ -454,7 +455,7 @@ li:hover .action {
 }
 
 @media only screen and (max-width: 1000px) {
-    .nContainer {
+    /* .nContainer {
         border: none;
         bottom: 1%;
         left: 5%;
@@ -469,7 +470,7 @@ li:hover .action {
         padding: 10px 10px 10px 30px;
         color: #000;
         font-size: 18px;
-    }
+    } */
 
     li .action {
         position: absolute;
