--- a/style.css
+++ b/style.css
@@ -17,8 +17,6 @@ body {
     user-select: none;
 }
 
-
-/* for toast notification */
 #notification-popup {
     position: fixed;
     bottom: 6%;
@@ -27,12 +25,10 @@ body {
     width: 340px;
     padding: 15px;
     border-radius: 5px;
-    /* Ensure it's above other content */
     z-index: 999;
     color: white;
     text-align: center;
     font-weight: bold;
-    /* Smooth fade-in/out effect */
     transition: opacity 0.3s ease-in-out;
 }
 
@@ -71,19 +67,9 @@ body {
     overflow: auto;
 }
 
-.popTaskBox::-webkit-scrollbar {
-    width: 20px;
-}
-
-.popTaskBox::-webkit-scrollbar-track {
-    background: #fff;
-    border-radius: 25px;
-}
-
-.popTaskBox::-webkit-scrollbar-thumb {
-    background: #1877f2;
-    border-radius: 25px;
-    border: 6px solid #fff;
+.popTaskBox {
+    scrollbar-width: thin;
+    scrollbar-color: #1877f2 #fff;
 }
 
 .button-box {
@@ -179,7 +165,6 @@ body {
     font-size: 40px;
     border-radius: 5px;
     cursor: not-allowed;
-    /* Change cursor to not allowed */
     color: #fff;
     background: #1877f2;
     border: none;
@@ -292,19 +277,9 @@ body {
     padding-right: 1px;
 }
 
-.todoList::-webkit-scrollbar {
-    width: 20px;
-}
-
-.todoList::-webkit-scrollbar-track {
-    background: #fff;
-    border-radius: 25px;
-}
-
-.todoList::-webkit-scrollbar-thumb {
-    background: #1877f2;
-    border-radius: 25px;
-    border: 6px solid #fff;
+.todoList {
+    scrollbar-width: thin;
+    scrollbar-color: #1877f2 #fff;
 }
 
 ul li {
@@ -322,7 +297,6 @@ ul li {
     box-shadow: 0.1px 0.1px 2px rgba(0, 0, 0, 0.3);
     font-family: inherit;
     letter-spacing: 0.8px;
-    /* cursor: pointer; */
     word-wrap: break-word;
 }
 
@@ -387,7 +361,6 @@ li:hover .action {
 .hidden {
     display: none;
 }
-
 
 .footer button {
     padding: 10px 12px;
@@ -474,11 +447,9 @@ li:hover .action {
     .btns_filter .btns {
         width: 65%;
     }
-
 }
 
 @media only screen and (max-width: 1000px) {
-
     li .action {
         position: absolute;
         top: 7px;
@@ -487,5 +458,4 @@ li:hover .action {
         visibility: visible;
         opacity: 1;
     }
-
 }
