--- a/style.css
+++ b/style.css
@@ -66,14 +66,15 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 400px;
-    max-height: 300px;
+    max-width: 350px;
+    max-height: 250px;
     overflow: auto;
 }
 
 .popTaskBox {
     scrollbar-width: thin;
     scrollbar-color: #1877f2 #fff;
+    word-wrap: break-word;
 }
 
 .button-box {
