--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
@@ -111,8 +110,7 @@ body {
 }
 
 .container {
-    width: 500px;
-    padding: 20px 0 20px 20px;
+    width: 40%;
     border-radius: 8px;
     border: 1.5px solid #999;
     background: #fff;
@@ -128,10 +126,8 @@ body {
 
 .container .addInput {
     width: 100%;
-    padding-right: 20px;
-    margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     position: relative;
 }
@@ -139,7 +135,6 @@ body {
 .addInput input {
     width: 88%;
     height: 50px;
-    padding: 10px;
     padding-left: 35px;
     font-size: 18px;
     outline: none;
@@ -193,10 +188,9 @@ body {
 }
 
 .btns_filter {
-    padding-right: 20px;
     margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .btns_filter .btns {
@@ -247,7 +241,7 @@ body {
 }
 
 .btns_filter .filter {
-    width: 48%;
+    width: 50%;
 }
 
 .btns_filter .filter input {
@@ -387,8 +381,7 @@ li:hover .action {
 
 @media only screen and (max-width: 650px) {
     .container {
-        width: 400px;
-        padding: 20px 0 20px 20px;
+        width: 90%;
         border-radius: 8px;
         border: 1.5px solid #999;
         background: #fff;
@@ -400,8 +393,7 @@ li:hover .action {
 
 @media only screen and (max-width: 500px) {
     .container {
-        width: 390px;
-        padding: 20px 0 20px 20px;
+        width: 90%;
         border-radius: 8px;
         border: 1.5px solid #999;
         background: #fff;
@@ -413,8 +405,7 @@ li:hover .action {
 
 @media only screen and (max-width: 375px) {
     .container {
-        width: 350px;
-        padding: 20px 0 20px 20px;
+        width: 90%;
         border-radius: 8px;
         border: 1.5px solid #999;
         background: #fff;
@@ -426,8 +417,7 @@ li:hover .action {
 
 @media only screen and (max-width: 280px) {
     .container {
-        width: 277px;
-        padding: 10px 0 10px 10px;
+        width: 90%;
         border-radius: 8px;
         border: 1.5px solid #999;
         background: #fff;
